tests/neg-custom-args/captures/i21401.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21401.scala:15:23 ---------------------------------------
15 |  val a = usingIO[IO^](x => x) // error
   |                       ^^^^^^
   |Found:    (x: IO^'s1) ->'s2 IO^{x}
   |Required: IO^ => IO^{any}
   |
   |Note that capability `x` is not included in capture set {any}
   |because (x : IO^'s1) is not visible from any in value a.
   |
   |where:    =>  refers to a root capability created in value a when checking argument to parameter op of method usingIO
   |          ^   refers to the root capability caps.any
   |          any is a root capability created in value a
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i21401.scala:16:66 ------------------------------------------------------------
16 |  val leaked: [R, X <: Boxed[IO^] -> R] -> (op: X) -> R = usingIO[Res](mkRes) // error
   |                                                                  ^^^
   |     Type variable R of method usingIO cannot be instantiated to [R, X <: Boxed[IO^] -> R] => (op: X) -> R since
   |     the part IO^ of that type captures the root capability `any`.
   |
   |     where:    ^ refers to the root capability caps.any
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21401.scala:17:67 ---------------------------------------
17 |  val x: Boxed[IO^] = leaked[Boxed[IO^], Boxed[IO^] -> Boxed[IO^]](x => x) // error
   |                                                                   ^^^^^^
   |  Found:    (x: Boxed[IO^]^'s3) ->'s4 Boxed[IO^{fresh}]
   |  Required: Boxed[IO^] -> Boxed[IO^{any}]
   |
   |  Note that capability `fresh` is not included in capture set {any}
   |  because fresh is not visible from any in value x².
   |
   |  where:    ^     refers to the root capability caps.any
   |            any   is a root capability created in value x²
   |            fresh is a root capability associated with the result type of (x: Boxed[IO^]^'s3): Boxed[IO^{fresh}]
   |            x     is a reference to a value parameter
   |            x²    is a value in method test2
   |
   | longer explanation available when compiling with `-explain`
